@@ -53,6 +53,14 @@ namespace gui
 
 		//! Get if the window titlebar will be drawn
 		virtual bool getDrawTitlebar() const = 0;
+
+		//! Returns the rectangle of the drawable area (without border and without titlebar)
+		/** The coordinates are given relative to the top-left position of the gui element.<br>
+		So to get absolute positions you have to add the resulting rectangle to getAbsolutePosition().UpperLeftCorner.<br>
+		To get it relative to the parent element you have to add the resulting rectangle to getRelativePosition().UpperLeftCorner.
+		Beware that adding a menu will not change the clientRect as menus are own gui elements, so in that case you might want to subtract
+		the menu area additionally.	*/
+		virtual core::rect<s32> getClientRect() const = 0;
 	};
 
 
