@@ -63,6 +63,9 @@ namespace gui
         //! Get if the window titlebar will be drawn
         virtual bool getDrawTitlebar() const;
 
+		//! Returns the rectangle of the drawable area (without border and without titlebar)
+		virtual core::rect<s32> getClientRect() const;
+
 		//! Writes attributes of the element.
 		virtual void serializeAttributes(io::IAttributes* out, io::SAttributeReadWriteOptions* options) const;
 
@@ -71,9 +74,12 @@ namespace gui
 
 	protected:
 
+		void updateClientRect();
+
 		IGUIButton* CloseButton;
 		IGUIButton* MinButton;
 		IGUIButton* RestoreButton;
+		core::rect<s32> ClientRect;
 
 		core::position2d<s32> DragStart;
 		bool Dragging, IsDraggable;
